2011-05-24 Riccardo Mottola <rm@gnu.org>

	Initial check-in.